Fri Mar 30 22:14:30 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportReassembly.cpp:

          Manage the ACE_Message_Block inside the ReceivedDataSample
          consistently for all cases of reassembling fragments.

        * dds/DCPS/transport/multicast/BestEffortSession.cpp:

          Don't call data_unavailable() with an invalid range.

        * tests/DCPS/UnitTests/Fragmentation.cpp:

          Update test for TransportReassembly change above.

Thu Mar 29 20:42:00 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:

          Improved debug logging for joining the multicast group.

        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/udp/UdpTransport.cpp:

          Fixed a bug in reference counting the TransportReactorTask.

Wed Mar 28 18:52:34 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * ChangeLog:
        * docs/history/ChangeLog-3.1:

          Moved version 3.1 ChangeLog entries to a separate file.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: